# crc_chatbot

./: .env.sample  .gitignore  README.md  pyproject.toml  vannaCrcPred.py
.devcontainer/: devcontainer.json
utils/: UserChat.py  VN_Singleton.py  change_password.py  crc_train.py  db_utils.py  login.py  model.py  reset_password.py  session_manager.py  setup.py  utility.py  vanna_calls.py
utils/error/: error_logging.py
utils/history/: chat_history.py
utils/images/: display_logo.py
